--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.13.2",
     "connect-ensure-login": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.3.5",
     "dotenv": "^6.0.0",
     "ejs": "^2.3.3",
